--- a/login - Copy.html
+++ b/login - Copy.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
   <title>Log-in - BULL & ANCHOR</title>
 
-    <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="style.css"  />
 
 </head>
 
