--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="footer">
-      <p  class="copyright">Designed by xlfixtech &copy;2024</p>
+      <p  class="copyright">Designed by <a href="#">xlfixtech</a> &copy;2024</p>
     </div>
   </header>
 </body>
